--- a/University_LIVE.html
+++ b/University_LIVE.html
@@ -32,7 +32,34 @@
         </div>    
     </section>
 
+    <section class="corps1">
+        <div class="A_propos">
+            <img src="image/Apropos.jpg" data-aos-duration="1500" data-aos="flip-left" class="pictures1">
+            <div class="text" data-aos-duration="1500" data-aos="fade-left">
+                <h1>A PROPOS</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam harum necessitatibus quaerat illo? Atque sit, dignissimos, soluta sunt laborum vel minus animi cupiditate itaque aperiam, commodi asperiores voluptatem temporibus natus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit pariatur architecto distinctio ullam cum consequuntur est quod esse cumque unde commodi eos repudiandae autem assumenda ipsam vitae, hic numquam dicta? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum atque dolorem dolor, quasi saepe rem aspernatur sunt perspiciatis voluptatum! Consectetur ipsum quam vero, animi dolorum dolorem deserunt est tempore odit.</p>
+            </div>
+        </div>
+            <br><br><br>
     
+        <div class="création">
+            <div class="text" data-aos-duration="1500" data-aos="fade-up-right">
+                <h1>CREATION</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate doloremque facere esse voluptatem reiciendis veritatis rem qui nesciunt dolore dolor, ut, vero ipsa debitis exercitationem architecto nemo, ea quidem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, suscipit sit exercitationem consequuntur hic, aliquam officiis repudiandae quo animi quas reprehenderit quidem similique eos voluptates dolor praesentium impedit ea. Expedita!</p>
+            </div>
+            <img src="image/pic2.jpg" alt="" data-aos="flip-right" data-aos-duration="1500" class="pictures2">
+        </div>
+
+        <div class="image">
+            <img src="image/pic3.jpg" alt="" data-aos="flip-up" data-aos-duration="1500">
+        </div>
+
+        <div class="inauguration">
+            <img src="image/pic4.jpg" data-aos="flip-down" data-aos-duration="1500" class="inaug">
+            <p data-aos-duration="1500" data-aos="fade-up-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates fugiat id, eveniet minima dolorum nihil laudantium vero omnis sed cumque ipsum, delectus similique ex libero veritatis repellendus. Optio, tenetur neque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime excepturi quisquam facere, porro mollitia tempore rerum aliquam accusamus cumque delectus ea cum vitae fugiat animi blanditiis laborum consequuntur ducimus reprehenderit!</p>
+        </div>
+    </section>
+
 
     <footer>
         <div>
