--- a/University_LIVE.html
+++ b/University_LIVE.html
@@ -38,6 +38,11 @@
             <div class="text" data-aos-duration="1500" data-aos="fade-left">
                 <h1>A PROPOS</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam harum necessitatibus quaerat illo? Atque sit, dignissimos, soluta sunt laborum vel minus animi cupiditate itaque aperiam, commodi asperiores voluptatem temporibus natus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit pariatur architecto distinctio ullam cum consequuntur est quod esse cumque unde commodi eos repudiandae autem assumenda ipsam vitae, hic numquam dicta? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum atque dolorem dolor, quasi saepe rem aspernatur sunt perspiciatis voluptatum! Consectetur ipsum quam vero, animi dolorum dolorem deserunt est tempore odit.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, dolor explicabo sapiente excepturi repellat quisquam. Itaque ullam labore, fuga expedita quos aspernatur provident earum eveniet maiores quis quasi ipsa porro!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt delectus quasi ipsa repudiandae beatae animi tempora ipsum perferendis doloremque eaque, maxime quaerat explicabo nemo quis, quam dolore expedita, error iusto.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt minima, consequuntur soluta nihil molestiae in maiores a sint libero ab, autem accusantium laborum debitis. Fugiat nesciunt aut accusantium iure odit.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quaerat! Error natus distinctio dolorem quasi hic harum ad ducimus nostrum necessitatibus quibusdam quisquam quod quae dolore maiores atque, veniam corrupti?
+                </p>
             </div>
         </div>
             <br><br><br>
