--- a/University_LIVE.html
+++ b/University_LIVE.html
@@ -20,7 +20,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li><a href="University_LIVE.html" class="active">HOME</a></li>
-                    <li><a href="About.html">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="Inscription.html">INSCRIPTION</a></li>
                 </ul>
             </nav>    
